# dream_client

./: .gitignore  Case Study 1 - Insurance Client.docx  README.md
anuj_jain/: app.py  config.py  pyproject.toml
anuj_jain/migrations-staging/versions/: 2c023d292c6a_.py  5ff4ba83bb2c_.py  6e46c0f7454f_.py  7861952c0ec6_.py  c8dca2f6ca36_.py  cb30b11b31fd_.py  da4d5e95add9_.py
anuj_jain/models/: __init__.py  customer_policy.py  customers.py  fuels.py  income_group.py  policies.py  vechile_fuel.py  vechile_segments.py
anuj_jain/src/controllers/: customer_controller.py  policy_controller.py
anuj_jain/src/routes/: __init__.py  customers_routes.py  policy_routes.py
anuj_jain/src/services/: mysql_connection.py  px_logging.py
anuj_jain/tests/: test_anuj_jain.py
database_records/: alembic_version.csv  customer_policies.csv  customers.csv  fuels.csv  income_group.csv  policies.csv  vechile_segments.csv  vechiles_fuels.csv
