[tool.poetry]
name = "anuj_jain"
version = "0.1.0"
description = ""
authors = ["Anuj Jain <anujj86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.9"
Flask = "^2.0.2"
Flask-Bcrypt = "^0.7.1"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.3.1"
Flask-SQLAlchemy = "^2.5.1"
flask-restx = "^0.5.1"
Flask-Migrate = "2.4.0"
gunicorn = "^20.1.0"
Werkzeug = "^2.0.2"
mysqlclient = "^2.1.0"
requests = "^2.27.1"
Flask-Seeder = "1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^5.2"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
